--- a/settings.gradle
+++ b/settings.gradle
@@ -3,4 +3,6 @@ include 'kodilla-testing'
 include 'kodilla-stream'
 include 'kodilla-exception'
 include 'kodilla-rps'
+include 'Moje'
+include 'Blackjack'
 
